# DUR

./: .gitignore  README.md  pyproject.toml
notebooks/: dur-working_minimal.ipynb
src/dur_mvp/: __init__.py  pipeline.py  utils.py
tests/: test_imports.py
