[project]
name = "dur_mvp"
version = "0.1.0"
description = "Drug Utilization Review (DUR)"
readme = "README.md"
requires-python = ">=3.9"

# Core dependencies
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
